--- a/Aio2.css
+++ b/Aio2.css
@@ -23,13 +23,16 @@ body {
     letter-spacing: 2px;
     z-index: 1;
     background-color: transparent;
+    position: absolute;
+    width: 100%;
+    height: 50px;
 }
 
 .left-line-out {
     display: inline-block;
     position: relative;
     padding-bottom: 3px;
-    color: #ff9300;
+    color: white;
 }
 
 .left-line-out:after {
@@ -44,25 +47,23 @@ body {
 
 .left-line-out:hover:after {
     width: 100%;
-    background: #ff9300;
+    background: white;
 }
-
-
-/* profile picture size to fit evenly */
-
-#Plexus_Video {
-    position: fixed;
-    min-width: 100%;
-    min-height: 100%;
-    z-index: -1;
-}
-
 
 .nav-links {
-    float: left;
-    margin-right: 40px;
-    margin-top: 15px;
-    color: #ff9300;
+    font-size: 1.4em;
+    color: white !important;
+    margin-top: 3px;
+}
+
+.nav-links:hover {
+    background-color: white;
+    transition: ease 2s;
+}
+
+.white-divider {
+    width: 100%;
+    height: .2em;
 }
 
 .section-1 {
@@ -75,4 +76,33 @@ body {
     background-size: cover;
     z-index: -100;
 
+}
+
+.section-2 {
+    /* Intro section */
+    background-image: url(bw-boat.jpg);
+    height: 100%;
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -100;
+
+}
+
+.main-page {
+    position: absolute;
+    top: 35%;
+    left: 5%;
+    color: white;
+}
+
+.main-title {
+    font-size: 10.0em;
+    width: 1.8em;
+}
+
+.main-sub {
+    font-size: 2.0em;
+    width: 12.5em;
 }
