--- a/AIOwebsite.css
+++ b/AIOwebsite.css
@@ -11,6 +11,7 @@ header {
     height: 100%;
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
 }
 
 div {
@@ -53,7 +54,7 @@ header {
     left: 0;
     line-height: 80px;
     margin-top: -100px;
-    position: absolute;
+    position: relative;
     text-align: center;
     top: 50%;
     width: 100%;
@@ -82,7 +83,9 @@ header {
     color: gray;
 }
 
-.section-heading-text {}
+.section-heading-text {
+    font-weight: bold;
+}
 
 .col-lg-12 {
     margin-bottom: 35px;
@@ -95,11 +98,48 @@ header {
     font-size: 50px;
 }
 
+.line {
+    height: 2px;
+    background-color: goldenrod;
+    width: 100px;
+    margin: 0 auto;
+}
+
+.link {
+    max-width: 400px;
+    margin: 0 auto;
+}
+
 .services {}
 
-@media (max-width:768) {
-    .col-md-4 {
-        flex: 0 0 33.333333%;
-        max-width: 33.333333%;
+.work-image {
+    width: 100%;
+}
+
+.work-sub {
+    font-size: 18px;
+    color: gray;
+    font-style: italic;
+}
+
+.work-title {
+    font-size: 25px;
+}
+
+
+@media (max-width:992px) {
+    .col-md-4,
+    .col-sm-6 {
+        position: relative;
+        width: 100%;
+        min-height: 1px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+}
+
+@media (max-width:1200px) {
+    .section-heading-text {
+        margin: 0 auto;
     }
 }
