--- a/AIOwebsite.css
+++ b/AIOwebsite.css
@@ -18,11 +18,18 @@ div {
     display: block;
 }
 
+li.navbar {
+    color: blue;
+}
 
 .navbar {
     min-height: 50px;
     background-color: transparent;
     border-bottom: 1px solid transparent;
+}
+
+a {
+    color: white;
 }
 
 .navbar-collapse.collapse {
@@ -37,6 +44,28 @@ div {
 
 .navbar.always-open .navbar-collapse.in {
     display: block;
+}
+
+.left-line-out {
+    display: inline-block;
+    position: relative;
+    padding-bottom: 3px;
+    color: linear-gradient(90deg, rgba(5, 73, 20, 1) 3%, rgba(15, 107, 35, 1) 50%, rgba(18, 117, 40, 1) 100%);
+}
+
+.left-line-out:after {
+    content: '';
+    display: block;
+    margin-top: 2px;
+    height: 2px;
+    width: 0px;
+    background: transparent;
+    transition: width .5s ease, background-color .5s ease;
+}
+
+.left-line-out:hover:after {
+    width: 100%;
+    background: linear-gradient(90deg, rgba(5, 73, 20, 1) 3%, rgba(15, 107, 35, 1) 50%, rgba(18, 117, 40, 1) 100%);
 }
 
 header {
@@ -92,6 +121,14 @@ header {
     margin-top: 35px;
 }
 
+.content-container {
+    padding: 1pc;
+    margin: 1pc;
+    border: 1px solid goldenrod;
+}
+
+.col-md-4 {}
+
 .fa-mobile-alt,
 .fa-envelope,
 .fa-lock {
@@ -110,7 +147,13 @@ header {
     margin: 0 auto;
 }
 
-.services {}
+.services {
+    padding-top: 5pc;
+}
+
+.works {
+    padding-top: 5pc;
+}
 
 .work-image {
     width: 100%;
