--- a/AIOwebsite.css
+++ b/AIOwebsite.css
@@ -50,7 +50,7 @@ a {
     display: inline-block;
     position: relative;
     padding-bottom: 3px;
-    color: linear-gradient(90deg, rgba(5, 73, 20, 1) 3%, rgba(15, 107, 35, 1) 50%, rgba(18, 117, 40, 1) 100%);
+    color: goldenrod;
 }
 
 .left-line-out:after {
@@ -65,7 +65,7 @@ a {
 
 .left-line-out:hover:after {
     width: 100%;
-    background: linear-gradient(90deg, rgba(5, 73, 20, 1) 3%, rgba(15, 107, 35, 1) 50%, rgba(18, 117, 40, 1) 100%);
+    background: goldenrod;
 }
 
 header {
@@ -128,6 +128,16 @@ header {
 
 }
 
+.content-container-2 {
+    margin-top: 1pc;
+    padding: 1pc;
+}
+
+.content-container-2:hover {
+    box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, .2);
+    transition: ease .1s;
+}
+
 .col-md-4 {}
 
 .fa-mobile-alt,
@@ -148,12 +158,20 @@ header {
     margin: 0 auto;
 }
 
+.about {
+    margin-top: 8pc;
+}
+
 .services {
-    padding-top: 5pc;
+    margin-top: 8pc;
 }
 
 .works {
-    padding-top: 5pc;
+    margin-top: 5pc;
+}
+
+.team {
+    margin-top: 5pc;
 }
 
 .work-image {
@@ -185,6 +203,38 @@ header {
 .about-picture {
     width: 100%;
 
+}
+
+.pricing-box {
+    height: 510px;
+    background: gree2n;
+
+}
+
+.pricing-box-title {
+    font-size: 40px;
+    height: 100px;
+    border: 1px solid goldenrod;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pricing-info {
+    border-right: 1px goldenrod solid;
+    border-left: 1px goldenrod solid;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    margin-top: 2px;
+    height: 100px;
+}
+
+.buyNow {
+    background: goldenrod;
 }
 
 @media (max-width:992px) {
