--- a/AIOwebsite.css
+++ b/AIOwebsite.css
@@ -236,11 +236,19 @@ header {
     background: goldenrod;
 }
 
+.footer-text {
+    margin-top: 30px;
+    color: goldenrod;
+    word-spacing: 3px;
+    letter-spacing: 5px;
+}
+
 #map {
     height: 400px;
     width: 100%;
     margin-top: 100px;
 }
+
 
 @media (max-width:992px) {
     .col-md-4,
